# telegram-data-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  activate_venv.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: unittests.yml
config/: settings.py
data/: README.md
docs/: README.md
examples/: README.md  data_pipeline_diagram.html
notebooks/: README.md
scripts/: README.md  detect_objects.py  load_to_postgres.py  scrape_telegram.py
src/api/: crud.py  database.py  main.py  schemas.py
src/dagster_pipeline/: jobs.py  ops.py  schedules.py
src/dbt/: dbt_project.yml  packages.yml  profiles.yml
src/dbt/models/: schema.yml
src/dbt/models/marts/: dim_channels.sql  dim_dates.sql  fct_image_detections.sql  fct_messages.sql  schema.yml
src/dbt/models/staging/: stg_telegram_messages.sql
src/dbt/tests/: assert_media_type_exists_if_has_media.sql  assert_valid_confidence_score.sql  assert_valid_date_key.sql
