[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name" # Placeholder, update this
version = "0.1.0"
description = "A new Python project" # Placeholder, update this
requires-python = ">=3.8"
keywords = ["python", "project", "template"] # Placeholder, update this
authors = [
  { name = "Your Name", email = "your.email@example.com" }, # Placeholder, update this
]
license = { file = "LICENSE" } # Create a LICENSE file if needed
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your_username/your_project_name" # Placeholder, update this
"Bug Tracker" = "https://github.com/your_username/your_project_name/issues" # Placeholder, update this

[tool.setuptools.packages.find]
where = ["src"] # Tell setuptools to look for packages in src/
